@@ -4,7 +4,9 @@ Released 2.4.45 2017-09-xx
 Changes since 2.4.44:
 
 Lib/
-* 
+
+Tests/
+* removed work-around in t_cext.py
 
 ----------------------------------------------------------------
 Released 2.4.44 2017-09-08
@@ -1509,4 +1511,4 @@ Released 2.0.0pre02 2002-02-01
 ----------------------------------------------------------------
 Released 1.10alpha3 2000-09-19
 
-$Id: CHANGES,v 1.467 2017/09/26 09:40:26 stroeder Exp $
+$Id: CHANGES,v 1.468 2017/10/09 14:40:48 stroeder Exp $
